apps/platform/observability/base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-observability
  labels:
    platform.jaccloud.nl/managed-by: argocd
    platform.jaccloud.nl/tenant: platform
    platform.jaccloud.nl/service: observability
