apps/platform/observability/base/pushgateway.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway
  labels:
    app.kubernetes.io/name: pushgateway
    app.kubernetes.io/component: push
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pushgateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pushgateway
        app.kubernetes.io/component: push
    spec:
      containers:
        - name: pushgateway
          image: prom/pushgateway:v1.11.2
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /-/healthy
              port: 9091
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9091
      targetPort: 9091
      protocol: TCP
  selector:
    app.kubernetes.io/name: pushgateway
